force-app/main/default/objects/Customer__c/Customer__c.object-meta.xml
<CustomObject>
    <description>This is an custom created object Customer</description>
    <label>Customer</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>