force-app/main/default/objects/Customer__c/fields/Auto_No_for_Customers__c.field-meta.xml
<CustomField>
    <fullName>Auto_No_for_Customers__c</fullName>
    <displayFormat>C-{00}</displayFormat>
    <externalId>true</externalId>
    <label>Auto No for Customers</label>
    <type>AutoNumber</type>
</CustomField>