force-app/main/default/objects/Customer__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <formula>IF(( Amount__c &gt;100), &quot;Congratulations&quot;, &quot;LOSER&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will be automatically populated</inlineHelpText>
    <label>Comments</label>
    <type>Text</type>
</CustomField>