force-app/main/default/objects/Customer__c/fields/Customer_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requirement__c</fullName>
    <label>Customer Requirement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Need for Servicing?</fullName>
            </value>
            <value>
                <fullName>Need to Buy?</fullName>
            </value>
            <value>
                <fullName>Need for Management?</fullName>
            </value>
            <value>
                <fullName>Raise a Complaint?</fullName>
            </value>
            <value>
                <fullName>Not Satisfied with Service?</fullName>
            </value>
            <value>
                <fullName>Need a Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>