force-app/main/default/objects/Customer__c/fields/Day_Count__c.field-meta.xml
<CustomField>
    <fullName>Day_Count__c</fullName>
    <description>Counting the no of days</description>
    <label>Day Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>