force-app/main/default/objects/Customer__c/fields/Geo_Location_Test26v0_3__c.field-meta.xml
<CustomField>
    <fullName>Geo_Location_Test26v0_3__c</fullName>
    <label>Geo Location Test26v0.3</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>