force-app/main/default/objects/Customer__c/fields/Items__c.field-meta.xml
<CustomField>
    <fullName>Items__c</fullName>
    <inlineHelpText>Select Item</inlineHelpText>
    <label>Items</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pen</fullName>
            </value>
            <value>
                <fullName>Pencil</fullName>
            </value>
            <value>
                <fullName>Eraser</fullName>
            </value>
            <value>
                <fullName>Calculator</fullName>
            </value>
            <value>
                <fullName>Copies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>