force-app/main/default/objects/Customer__c/fields/Test26v0_1__c.field-meta.xml
<CustomField>
    <fullName>Test26v0_1__c</fullName>
    <label>Test26v0.1</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>