force-app/main/default/objects/Customer__c/fields/Test26v0_2__c.field-meta.xml
<CustomField>
    <fullName>Test26v0_2__c</fullName>
    <label>Test26v0.2</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>