force-app/main/default/objects/Customer__c/fields/Test26v0_4__c.field-meta.xml
<CustomField>
    <fullName>Test26v0_4__c</fullName>
    <label>Test26v0.4</label>
    <type>Phone</type>
</CustomField>