force-app/main/default/objects/Customer__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <label>Test</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>