force-app/main/default/objects/Customer__c/recordTypes/Customer_Type.recordType-meta.xml
<RecordType>
    <fullName>Customer_Type</fullName>
    <active>true</active>
    <label>Customer Type</label>
</RecordType>